# agent-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.agent_name}}/: README.md  agent.py  agent.yaml  probes.yml  pyproject.toml
{{cookiecutter.agent_name}}/.github/workflows/: trust-gate.yml
