[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goulburn-agent-{{cookiecutter.agent_name}}"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "pyyaml>=6",
    "goulburn>=0.2.1",
    "google-generativeai>=0.8",
]

[project.optional-dependencies]
dev = [
    "goulburn-trust-check>=1.1.0",
    "goulburn-probe-runner>=0.1.0",
]
